[workspace]
resolver = "2"
members = [
    "ness-console",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
dropshot = "0.15.1"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
semver = "1.0.25"
serde_json = "1.0.138"
schemars = { version = "0.8.21", features = ["chrono", "uuid"] }
uuid = { version = "1.13.1", features = ["serde", "v7"] }
chrono = { version = "0.4.39", features = ["serde"] }