[package]
name = "ness-console"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
dropshot.workspace = true
futures.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.11"
tokio.workspace = true
uuid.workspace = true
